# libnss-extrausers-rpm

./: Dockerfile  Makefile  README.md  configure.ac  libnss-extrausers-0.6.orig.tar  libnss-extrausers.spec  libnss-extrausers_0.6-6.debian.tar  src-Makefile.am
.github/workflows/: docker-image.yml
testfile/: Dockerfile.testfile  group  nsswitch.conf  passwd  result.expected  shadow
